<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="center"
            android:fitsSystemWindows="true"/>

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"/>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="50dp"
                android:gravity="center_horizontal">


                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    android:text="@string/title"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    style="@style/LoginEditText"/>

                <EditText
                    android:id="@+id/password"
                    style="@style/LoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/action_login"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/action_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_transp"
                    android:text="@string/action_register"/>

            </LinearLayout>
    </RelativeLayout>
</layout>
