<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="order"
            type="com.itis.pochta.model.base.Order" />
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:background="@color/colorBackgroundLight">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewPackage">

        <LinearLayout
            android:id="@+id/package_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/LineItem">
                <TextView
                    style="@style/LineMainText"
                    android:text="@string/prompt_volume"/>
                <TextView
                    android:id="@+id/volume"
                    style="@style/LineDataText"
                    android:text="@{order.volume}"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorHint"/>

            <LinearLayout
                style="@style/LineItem">
                <TextView
                    style="@style/LineMainText"
                    android:text="@string/prompt_weight"/>
                <TextView
                    android:id="@+id/weight"
                    style="@style/LineDataText"
                    android:text="@{order.weight}"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorHint"/>

        <LinearLayout
            style="@style/LineItem">
            <TextView
                style="@style/LineMainText"
                android:text="@string/prompt_ticket"/>
            <TextView
                android:id="@+id/ticket"
                style="@style/LineDataText"
                android:text="@{order.ticket}"
                />
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorHint"/>


            <LinearLayout
                style="@style/LineItem">
                <TextView
                    style="@style/LineMainText"
                    android:text="Адрес доставки"/>
                <TextView
                    android:id="@+id/destination"
                    style="@style/LineDataText"
                    android:text="@{order.destinationAddress}"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorHint"/>

            <Button
                android:id="@+id/action_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_square"
                android:text="Забрать"
                android:textColor="@color/colorTextWhite"
                />

        </LinearLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>